--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -57,8 +57,13 @@ branches:
         required_approving_review_count: 1
         dismiss_stale_reviews: true
         require_code_owner_reviews: true
-        dismissal_restrictions: null
+        dismissal_restrictions: {}
 
-      required_status_checks: null
+      required_status_checks:
+        strict: true
+        contexts: []
       required_linear_history: true
-      restrictions: null
+      restrictions:
+        apps: []
+        users: []
+        teams: []
