--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -51,7 +51,7 @@ teams:
     permission: admin
 
 branches:
-  - name: master
+  - name: main
     protection:
       required_pull_request_reviews:
         required_approving_review_count: 1
