chore: ran mdformat on all files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,11 +35,12 @@ repos:
       rev: 0.2.3
       hooks:
           - id: yamlfmt
-    - repo: https://github.com/matthewhughes934/pre-commit-format-markdown
-      rev: v0.5.0
+    - repo: https://github.com/executablebooks/mdformat
+      rev: 0.7.17
       hooks:
-          - id: format-markdown-script
-            args: [--width, '100']
+          - id: mdformat
+            args: [--wrap=100, --number]
+            types: [markdown]
     - repo: https://github.com/compilerla/conventional-pre-commit
       rev: v3.2.0
       hooks:
