--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,6 @@
 ---
+minimum_pre_commit_version: 3.7.0
+default_install_hook_types: [pre-commit, commit-msg]
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.6.0
@@ -46,3 +48,11 @@ repos:
       hooks:
           - id: conventional-pre-commit
       stages: [commit-msg]
+    - repo: local
+      hooks:
+          - id: cargo-about
+            name: cargo-about
+            entry: cargo about generate
+            args: [--format=json]
+            language: system
+            pass_filenames: false
