--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,4 +13,6 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-python@v3
+            - name: Install dev dependencies
+              run: cargo build --tests
             - uses: pre-commit/action@v3.0.1
