--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ git2 = "0.18.3"
 home = "0.5.9"
 serde = { version = "1.0.202", features = ["serde_derive"] }
 thiserror = "1.0.61"
+
+[dev-dependencies]
+cargo-about = "0.6.1"
