refactor(project): Refactored project list into more extensible structure

--- a/tests/.config/plumb.yaml
+++ b/tests/.config/plumb.yaml
@@ -1,6 +1,10 @@
 ---
 locations:
-    projects: ~/projects
+    projects:
+        - path: ~/projects
+          name: projects_dir
+    defaults:
+        projects: projects_dir
 projects:
     - name: plumb
     - name: monad
