feat(config): _de_serialization of config object

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,windows,linux,rust
 
 .vscode/*
+tests/tmp
+tests/.config/*
