--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,11 @@ clap = { version = "4.5.4", features = ["derive"] }
 config = "0.14.0"
 git2 = "0.18.3"
 home = "0.5.9"
-serde = { version = "1.0.202", features = ["serde_derive"] }
+notify = "6.1.1"
+serde = { version = "1.0.202", features = ["serde_derive", "derive"] }
+serde_yaml = "0.9.34"
 thiserror = "1.0.61"
+tokio = { version = "1.37.0", features = ["fs", "io-std", "io-util", "tokio-macros", "rt-multi-thread", "test-util", "macros"] }
+
+[dev-dependencies]
+tokio = { version = "1.37.0", features = ["test-util"] }
